- Fix flickering test - Fix GeometryValidation in case of h3Index and referenced Features - Add job-service docker file - Add handling of versionRef to export step (resolve & validate) - Add missing forward of filters, context and versionRef to ExportCompiler - In tests, add possibility to createSpace with spaceDefinition - Add Tests for GeometryValidator - Add function to retrieve the used "searchableProperties" - Add geometry validation using new GeometryValidator to centralize related code - Fix bug in GetFeaturesByGeometry QR that caused H3-index tests to fail - Add first IntegrationTests - Several improvements - Fix bug in SQLQuery that for fully substituted (executable) queries, in some scenarios the custom quotes were not "escaped"   - Introduce a new "escaping" mechanism for custom quotes - Fix two bugs which have happened during job-deletions. - Fix bug in SQLQuery that values could not be used to replace parameter placeholders if containing a dollar sign - Fix bug in GetFeaturesByGeometryBuilder (missing AND) - Set threadCondition filter fragment in all sub-parts of the content query correctly - Fix query building for "GetFeaturesByGeometry" queries if geometry or ref is null
Signed-off-by: Benjamin Rögner <benjamin.roegner@here.com>
Signed-off-by: Maximilian Chrzan <maximilian.chrzan@here.com>
Signed-off-by: mchrza <maximilian.chrzan@here.com>